re PR debug/42662 (invalid rtl sharing found in the insn)

PR debug/42662
	* simplify-rtx.c (simplify_relational_operation_1): Avoid invalid rtx
	sharing when canonicalizing ({lt,ge}u (plus a b) b).

	* gcc.dg/pr42662.c: New test.

From-SVN: r155831